[gd_scene load_steps=19 format=3 uid="uid://dm3xe17t7u5od"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_hagkq"]
[ext_resource type="Texture2D" uid="uid://bq7hwwvwb5fsr" path="res://assets/ui/panel.png" id="2_i8gyc"]
[ext_resource type="FontFile" uid="uid://c5lo1dmludpvr" path="res://assets/fonts/04B_19__.TTF" id="2_qecwx"]
[ext_resource type="FontFile" uid="uid://bg5ec5dc82sun" path="res://assets/fonts/04B_08__.TTF" id="3_s4m77"]
[ext_resource type="Texture2D" uid="uid://cnki31edipxw3" path="res://assets/ui/panel-banner.png" id="3_w1b8f"]
[ext_resource type="FontFile" uid="uid://ehedvuov7l8n" path="res://assets/fonts/04B_24__.TTF" id="5_wim2b"]
[ext_resource type="PackedScene" uid="uid://cv4dy65qu5qex" path="res://scenes/gui/clock_gui.tscn" id="7_7p07p"]
[ext_resource type="PackedScene" uid="uid://b3eajbjnduiiw" path="res://scenes/gui/coin_gui.tscn" id="8_4kdkt"]
[ext_resource type="PackedScene" uid="uid://b0nlk5s2e1ejs" path="res://scenes/gui/skull_gui.tscn" id="9_yd0ai"]
[ext_resource type="Texture2D" uid="uid://rmovjhjdpfos" path="res://assets/ui/back-btn.png" id="10_p7l7g"]
[ext_resource type="Texture2D" uid="uid://bdbprfr2ol630" path="res://assets/ui/restart-btn.png" id="11_afqos"]
[ext_resource type="Texture2D" uid="uid://c7xgoa448i3r4" path="res://assets/ui/share-btn.png" id="12_88qa6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sou82"]
texture = ExtResource("2_i8gyc")

[sub_resource type="LabelSettings" id="LabelSettings_jmgvs"]
font = ExtResource("2_qecwx")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_2haxr"]
font = ExtResource("3_s4m77")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5vn64"]
font = ExtResource("2_qecwx")
font_size = 14
font_color = Color(8.66354e-07, 0.751884, 0.549187, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1lhim"]
font = ExtResource("5_wim2b")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gjlrc"]
font = ExtResource("5_wim2b")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_hagkq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sou82")

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 3.0
offset_right = 66.0
offset_bottom = 43.0
grow_horizontal = 2
texture = ExtResource("3_w1b8f")

[node name="MainTitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Paused"
label_settings = SubResource("LabelSettings_jmgvs")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScoreTitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Score"
label_settings = SubResource("LabelSettings_2haxr")
horizontal_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_5vn64")
horizontal_alignment = 1

[node name="TimeDisplay" type="Control" parent="Control/Panel"]
custom_minimum_size = Vector2(32, 11)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = 12.0
offset_right = 38.0
offset_bottom = 23.0
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="Control/Panel/TimeDisplay"]
custom_minimum_size = Vector2(16, 12)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -5.5
offset_right = 29.0
offset_bottom = 6.5
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_1lhim")
vertical_alignment = 1

[node name="ClockGUI" parent="Control/Panel/TimeDisplay" instance=ExtResource("7_7p07p")]

[node name="CoinsDisplay" type="Control" parent="Control/Panel"]
custom_minimum_size = Vector2(48, 11)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = 12.0
offset_right = 89.0
offset_bottom = 23.0
grow_vertical = 2

[node name="CoinsLabel" type="Label" parent="Control/Panel/CoinsDisplay"]
custom_minimum_size = Vector2(40, 12)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -5.5
offset_right = 55.0
offset_bottom = 6.5
grow_vertical = 2
text = "0
"
label_settings = SubResource("LabelSettings_gjlrc")
vertical_alignment = 1

[node name="CoinGUI" parent="Control/Panel/CoinsDisplay" instance=ExtResource("8_4kdkt")]

[node name="KillsDisplay" type="Control" parent="Control/Panel"]
custom_minimum_size = Vector2(48, 11)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = 12.0
offset_right = 118.0
offset_bottom = 23.0
grow_vertical = 2

[node name="KillsLabel" type="Label" parent="Control/Panel/KillsDisplay"]
custom_minimum_size = Vector2(40, 12)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -5.5
offset_right = 6.0
offset_bottom = 6.5
grow_horizontal = 0
grow_vertical = 2
text = "0
"
label_settings = SubResource("LabelSettings_1lhim")
vertical_alignment = 1

[node name="SkullGUI" parent="Control/Panel/KillsDisplay" instance=ExtResource("9_yd0ai")]

[node name="BackButton" type="TextureButton" parent="Control/Panel"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -24.0
offset_right = 36.0
offset_bottom = -8.0
grow_vertical = 0
texture_normal = ExtResource("10_p7l7g")

[node name="RestartButton" type="TextureButton" parent="Control/Panel"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -24.0
offset_right = 58.0
offset_bottom = -8.0
grow_vertical = 0
texture_normal = ExtResource("11_afqos")

[node name="ShareButton" type="TextureButton" parent="Control/Panel"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = -8.0
grow_vertical = 0
texture_normal = ExtResource("12_88qa6")

[connection signal="pressed" from="Control/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/Panel/ShareButton" to="." method="_on_share_button_pressed"]
